# cicflowmeter

./: .gitignore  .gitlab-ci.yml  .rtx.toml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  tox.ini
src/: flow.py  flow_session.py  main.py
src/cicflowmeter/: constants.py  flow.py  flow_session.py  sniffer.py  utils.py  writer.py
src/cicflowmeter/features/: flag_count.py  flow_bytes.py  packet_count.py  packet_length.py  packet_time.py  response_time.py
src/cicflowmeter/features/context/: __init__.py  packet_flow_key.py
src/features/: flag_count.py  flow_bytes.py  packet_count.py  packet_length.py  packet_time.py
src/flowmeter/: constants.py
src/flowmeter/features/: packet_count.py  packet_time.py
src/time_series/: flow_clumps.py  processor.py
tests/: test_features.py
tests/data/: test.pcapfile
