[tool.poetry]
name = "cicflowmeter"
version = "0.2.0"
description = "CICFlowMeter Python Implementation"
authors = ["Hieu Le <hieulw99@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/hieulw/cicflowmeter"
packages = [
    { include = "cicflowmeter", from = "src" },
]

[tool.poetry.scripts]
cicflowmeter = 'cicflowmeter.sniffer:main'


[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
scipy = "^1.11.4"
scapy = "^2.5.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
